; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/tools/carlu/src/extr_usb.c_carlusb_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/firmware/carl9170fw/tools/carlu/src/extr_usb.c_carlusb_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.carlu = type { i32*, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.carlu*)* @carlusb_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @carlusb_init(%struct.carlu* %0) #0 {
  %2 = alloca %struct.carlu*, align 8
  store %struct.carlu* %0, %struct.carlu** %2, align 8
  %3 = load %struct.carlu*, %struct.carlu** %2, align 8
  %4 = getelementptr inbounds %struct.carlu, %struct.carlu* %3, i32 0, i32 2
  %5 = call i32 @init_list_head(i32* %4)
  %6 = call i32 (...) @SDL_CreateMutex()
  %7 = load %struct.carlu*, %struct.carlu** %2, align 8
  %8 = getelementptr inbounds %struct.carlu, %struct.carlu* %7, i32 0, i32 1
  store i32 %6, i32* %8, align 8
  %9 = load %struct.carlu*, %struct.carlu** %2, align 8
  %10 = getelementptr inbounds %struct.carlu, %struct.carlu* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 1
  store i32 -1, i32* %12, align 4
  %13 = load %struct.carlu*, %struct.carlu** %2, align 8
  %14 = getelementptr inbounds %struct.carlu, %struct.carlu* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  store i32 -1, i32* %16, align 4
  ret i32 0
}

declare dso_local i32 @init_list_head(i32*) #1

declare dso_local i32 @SDL_CreateMutex(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
